# VomiShield

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
docs/: auto-update.md
docs/superpowers/plans/: 2026-07-02-vomishield-overlay-mvp.md  2026-07-03-anchor-style-part-settings.md
docs/superpowers/specs/: 2026-07-02-vomishield-overlay-mvp-design.md  2026-07-03-anchor-style-settings-design.md
src/: App.css  App.tsx  autoUpdate.test.ts  autoUpdate.ts  desktopExperience.test.ts  desktopExperience.ts  i18n.test.ts  i18n.ts  index.css  main.tsx  settings.test.ts  settings.ts  settingsCommit.test.ts  settingsCommit.ts  settingsSync.test.ts  settingsSync.ts  tauri.test.ts  tauri.ts  viewMode.test.ts  viewMode.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
